@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class HRM {
    name
    vatNumber
    phoneNumber
    email
}

class Job {
    name
}

class Collaborator {
    name
    birthdate
    admission date
    address
    contact info (mobile and email)
    ID doc type and number
}

'class User {
'    name
'    email
'    password
'}

'Platform "1" -- "*" HRM : has registered >
Job "1" -- "*" Category : has >
HRM "1" - "1..*" Collaborator : wants to register >
'Task "*" -- "1" Employee: created by >
'Employee "0..1" -- "1" User: acts as >
@enduml